- Overhaul de entidades: Se volvio a reeimplementar Persona como entidad con el nombre UsuarioBase para cumplir con la consigna de una herencia (con dos clases que hereden de el para justificarla). También se elimino la clase Manager ya que no contenia atributos unicos para justificarla. Se manejara usuarios de tipo Manager a través de Empleado con el rol Manager. - Se borraron entidades que no se usaban: Admin, Cliente, ClienteDTO -  se cambio por EMAIL_APIKEY (muchos servicios SMTP se manejan con tokens/api keys y no con contraseñas directamente) - Se hizo que la excepcion de asignarAreaTicket sea más claro. - Se modifico asignarAreaTicket en TicketController para incluir TicketNoEncontradoException - Se agrego el tag de ExceptionHandler faltante a manejarExcepcionGenerica. También la expandio su funcionalidad de este y la vista error.html. - Se creo la carpeta contacto en templates, y las vistas formulario-contacto, contacto, email-template - Se agrego el metodo enviarEmailConHtml a EmailService - Se modifico templateEngine en ThymeleafConfig para incluir variables de contexto - Se creo EmailController, FaviconController, CustomErrorController - Se agrego el boton de Contactar Soporte a panel. - Se agrego la propiedad whitelabel enabled false a application.yml para deshabilitar la pagina de error generica de Spring Boot - Se agrego un constructor y getters a ErrorResponse - Se creo la entidad MensajeContacto - Se creo el repositorio IMensajeRepository - Se agrego un boton de Volver a Panel faltante a Crear Nuevo Ticket - Se agrego un fade in a la pagina de inicio (index.html) - Se creo el fragmento layout.html, footer - Se cambio el nombre del metodo findEmpleadoByNombre en IEmpleadoRepository a findEmpleadoByNombreUsuario para que sea más descriptivo a lo que hace (se podia confundir por busqueda por nombre inicial de UsuarioBase) - Se elimino la clase UsuarioDetailsService, y se movieron algunas de sus funciones a CustomUserDetailsService - Se modifico UsuarioD